--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,7 +20,22 @@
     "indent": ["error", 2],
     "linebreak-style": ["error", "unix"],
     "quotes": ["error", "double"],
-    "semi": ["error", "always"]
+    "semi": ["error", "always"],
+    "react/jsx-filename-extension": [
+      1,
+      { "extensions": [".js", ".jsx", ".ts", ".tsx"] }
+    ],
+    "@typescript-eslint/strict-boolean-expressions": 0,
+    "react/function-component-definition": [
+      2,
+      {
+        "namedComponents": ["arrow-function", "function-declaration"],
+        "unnamedComponents": "arrow-function"
+      }
+    ],
+    "newline-before-return": "error",
+    "react/require-default-props": 0,
+    "react/react-in-jsx-scope": "off"
   },
   "settings": {
     "react": {
